first working build

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -167,8 +167,8 @@
                     </div>
                     <div class="flex h-fit w-fit absolute top-28" id="result">
                         <h4>Result:</h4>
-                        <div class="flex justify-start bg-dark w-full h-full border-solid border-2 border-white relative">
-                            <span>RESULT</span>    
+                        <div class="flex justify-start w-fit h-fit relative">
+                            <span id="spanResult"></span>    
                         </div>
                     </div>
                 </section>
